WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190095
REGRESSION(
r236609
): API tests for mso list preservation are failing
https://bugs.webkit.org/show_bug.cgi?id=190095
Summary
REGRESSION(r236609): API tests for mso list preservation are failing
Ryosuke Niwa
Reported
2018-09-28 15:18:58 PDT
e.g.
https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/8288/steps/run-api-tests/logs/stdio
TestWebKitAPI.PasteWebArchive.ExposesHTMLTypeInDataTransfer Passed /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/PasteWebArchive.mm:123 Value of: [webView stringByEvaluatingJavaScript:@"pastedHTML.includes('<style class=\"WebKit-mso-list-quirks-style\">\\n<!--\\n')"].boolValue Actual: false Expected: true ... /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/PasteWebArchive.mm:144 Value of: [webView stringByEvaluatingJavaScript:@"htmlInDataTransfer.includes('[endif]')"].boolValue Actual: false Expected: true TestWebKitAPI.PasteWebArchive.PreservesMSOList Failed /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/PasteWebArchive.mm:174 Value of: [webView stringByEvaluatingJavaScript:@"pastedHTML.includes('<style class=\"WebKit-mso-list-quirks-style\">\\n<!--\\n')"].boolValue Actual: false Expected: true ... /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/PasteWebArchive.mm:191 Value of: [webView stringByEvaluatingJavaScript:@"htmlInDataTransfer.includes('[endif]')"].boolValue Actual: false Expected: true TestWebKitAPI.PasteWebArchive.PreservesMSOListInCompatibilityMode Failed
Attachments
Fixes the bug
(1.71 KB, patch)
2018-09-28 15:26 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-09-28 15:25:17 PDT
<
rdar://problem/44876754
>
Ryosuke Niwa
Comment 2
2018-09-28 15:26:45 PDT
Created
attachment 351119
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2018-09-28 15:32:58 PDT
Committed
r236618
: <
https://trac.webkit.org/changeset/236618
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug