REGRESSION(r236609): API tests for mso list preservation are failing https://bugs.webkit.org/show_bug.cgi?id=190095

Reviewed by Wenson Hsieh.

The regression was caused by appendNodeToPreserveMSOList called after an early return for not having renderer.
Clearly, comment & style elements coming from a MS word document wouldn't have a renderer.

Fixed the bug by changing the order.

* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::traverseNodesForSerialization):


Canonical link: https://commits.webkit.org/205048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236618 268f45cc-cd09-0410-ab3c-d52691b4dbfc